force-app/main/default/objects/Contact/fields/Payroll_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Reference__c</fullName>
    <label>Payroll Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>