force-app/main/default/objects/Contact/fields/Sharing_Regions__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Regions__c</fullName>
    <inlineHelpText>Showing regions other than the Owner&apos;s region that this record is shared with</inlineHelpText>
    <label>Additional Sharing Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sharing_Regions</valueSetName>
    </valueSet>
</CustomField>