force-app/main/default/objects/Contact/fields/sirenum__Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Activity_Status__c</fullName>
    <description>Old rule:IF( ((TODAY()-Last_Timesheet__c )&lt;21)|| Recently_Active__c =True,&quot;Active&quot;,&quot;Inactive&quot;)

Now that the rule reflects the direct status of the checkbox, this field may be eliminated, provided that all reports and views that filter based on this are instead based on the checkbox.</description>
    <formula>IF(ISBLANK(sirenum__Last_Timesheet__c ) &amp;&amp;  (TODAY()-  DATEVALUE(CreatedDate) )&lt;30,
   &quot;In_Progress&quot;,
    IF((TODAY()-sirenum__Last_Timesheet__c )&lt;21,&quot;Active&quot;,&quot;Inactive&quot;)
)</formula>
    <inlineHelpText>An temporal is active if his last Timesheet was in the past 90 days.

IF( (TODAY()-Last_Timesheet__c )&lt;21,&quot;Active&quot;,
    IF (((TODAY()-Last_Timesheet__c )&gt;7)||(TODAY()-  DATEVALUE(CreatedDate) )&gt;30,&quot;Inactive&quot;, &quot;In_Progress&quot;
    )
)</inlineHelpText>
    <label>Activity Status</label>
    <type>Text</type>
</CustomField>