force-app/main/default/objects/Contact/fields/sirenum__Additional_Phone__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Additional_Phone__c</fullName>
    <description>Additional phone numbers.</description>
    <inlineHelpText>Additional phone numbers.</inlineHelpText>
    <label>Additional Phone</label>
    <type>Phone</type>
</CustomField>