force-app/main/default/objects/Contact/fields/sirenum__Additional_Phone_Sanitised__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Additional_Phone_Sanitised__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(sirenum__Additional_Phone__c, &apos; &apos;, &apos;&apos;), &apos;-&apos;, &apos;&apos;)</formula>
    <label>Additional Phone Sanitised</label>
    <type>Text</type>
</CustomField>