force-app/main/default/objects/Contact/fields/sirenum__AddressGeocoded__c.field-meta.xml
<CustomField>
    <fullName>sirenum__AddressGeocoded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Address is geocoded (GPS Coordinates)</description>
    <label>AddressGeocoded</label>
    <type>Checkbox</type>
</CustomField>