force-app/main/default/objects/Contact/fields/sirenum__Availability_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Availability_Activity_Date__c</fullName>
    <inlineHelpText>When the Contact&apos;s Employee Request was created or was changed in some way or an Availability Period for the contact has been changed</inlineHelpText>
    <label>Availability Activity Date</label>
    <type>Date</type>
</CustomField>