force-app/main/default/objects/Contact/fields/sirenum__BACS_Reference__c.field-meta.xml
<CustomField>
    <fullName>sirenum__BACS_Reference__c</fullName>
    <label>BACS Reference / Roll Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>