force-app/main/default/objects/Contact/fields/sirenum__Bank_Postcode__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Bank_Postcode__c</fullName>
    <label>Bank Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>