force-app/main/default/objects/Contact/fields/sirenum__Can_See_Pay_Charge_Forecast__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Can_See_Pay_Charge_Forecast__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If ticked, this contact can see pay/charge forecast values when entering or approving times.</inlineHelpText>
    <label>Can See Pay/Charge Forecast</label>
    <type>Checkbox</type>
</CustomField>