force-app/main/default/objects/Contact/fields/sirenum__Client_Access__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Client_Access__c</fullName>
    <label>Client Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assign Tags</fullName>
            </value>
            <value>
                <fullName>See Logs</fullName>
            </value>
            <value>
                <fullName>See Shifts</fullName>
            </value>
            <value>
                <fullName>Start Shifts</fullName>
            </value>
            <value>
                <fullName>Manager Mode</fullName>
            </value>
            <value>
                <fullName>Trade Shifts</fullName>
            </value>
            <value>
                <fullName>Scan Card</fullName>
            </value>
            <value>
                <fullName>View All Shifts</fullName>
            </value>
            <value>
                <fullName>Create Shift</fullName>
            </value>
            <value>
                <fullName>Edit Shift</fullName>
            </value>
            <value>
                <fullName>Access Matched Shifts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>