force-app/main/default/objects/Contact/fields/sirenum__Client_Password__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Client_Password__c</fullName>
    <description>This field is deprecated and should not be used.</description>
    <label>Client Password (Deprecated)</label>
    <length>30</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>