force-app/main/default/objects/Contact/fields/sirenum__Client_Password_Token__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Client_Password_Token__c</fullName>
    <description>A randomly generated token that is included in the URL sent to the contact when setting or resetting their password.</description>
    <inlineHelpText>Verifies that the password reset page invocation is valid for the contact.</inlineHelpText>
    <label>Client Password Token</label>
    <length>32</length>
    <type>Text</type>
</CustomField>