force-app/main/default/objects/Contact/fields/sirenum__Client_Password_Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Client_Password_Token_Expiry__c</fullName>
    <description>A date and time after which the token is no longer valid.</description>
    <inlineHelpText>The password (re)set page must be accessed before this date/time, otherwise a new reset request must be submitted.</inlineHelpText>
    <label>Client Password Token Expiry</label>
    <type>DateTime</type>
</CustomField>