force-app/main/default/objects/Contact/fields/sirenum__ContNo__c.field-meta.xml
<CustomField>
    <fullName>sirenum__ContNo__c</fullName>
    <label>ContNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>