force-app/main/default/objects/Contact/fields/sirenum__Cost_Centre_Reference__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Cost_Centre_Reference__c</fullName>
    <label>Cost Centre Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>