force-app/main/default/objects/Contact/fields/sirenum__Default_Rota__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Default_Rota__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Rota is the field where the scheduling is done.</inlineHelpText>
    <label>Default Rota</label>
    <referenceTo>sirenum__Rota__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>