force-app/main/default/objects/Contact/fields/sirenum__Default_Site__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Default_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Site is the field where the information is given on which site which person would be working.</inlineHelpText>
    <label>Default Work Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>