force-app/main/default/objects/Contact/fields/sirenum__Default_Team__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Default_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Team is the field where the information is viewed who all would be working.</inlineHelpText>
    <label>Default Job Role</label>
    <referenceTo>sirenum__Team__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>