force-app/main/default/objects/Contact/fields/sirenum__Employee_Reference__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Employee_Reference__c</fullName>
    <inlineHelpText>The most recent open payroll record reference number for the employee.</inlineHelpText>
    <label>Employee Reference</label>
    <summarizedField>sirenum__Payroll_Record__c.sirenum__Employee_Reference__c</summarizedField>
    <summaryFilterItems>
        <field>sirenum__Payroll_Record__c.sirenum__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>sirenum__Payroll_Record__c.sirenum__Employee__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>