force-app/main/default/objects/Contact/fields/sirenum__Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Exclusivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exclusivity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (Exclusivity)</relationshipLabel>
    <relationshipName>Exclusivities</relationshipName>
    <type>Lookup</type>
</CustomField>