force-app/main/default/objects/Contact/fields/sirenum__Gender__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Gender__c</fullName>
    <formula>&quot;Unknown&quot;</formula>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>Gender (DEPRECATED)</label>
    <type>Text</type>
</CustomField>