force-app/main/default/objects/Contact/fields/sirenum__General_Comments__c.field-meta.xml
<CustomField>
    <fullName>sirenum__General_Comments__c</fullName>
    <label>General Comments</label>
    <type>TextArea</type>
</CustomField>