force-app/main/default/objects/Contact/fields/sirenum__Google_API_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Google_API_Access_Token__c</fullName>
    <inlineHelpText>The token in use until expiration</inlineHelpText>
    <label>Google API Access Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>