force-app/main/default/objects/Contact/fields/sirenum__Google_API_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Google_API_Refresh_Token__c</fullName>
    <inlineHelpText>Used by the Google Calendar interface to log in to the user&apos;s Google account</inlineHelpText>
    <label>Google API Refresh Token</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>