force-app/main/default/objects/Contact/fields/sirenum__Google_API_Token_Expiration__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Google_API_Token_Expiration__c</fullName>
    <label>Google API Token Expiration</label>
    <type>DateTime</type>
</CustomField>