force-app/main/default/objects/Contact/fields/sirenum__Google_API_Token_Master__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Google_API_Token_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Causes all users to use the same access token as this person. For use in Bryggen, or cases where all contacts use the same Google account.</description>
    <inlineHelpText>Always leave unticked unless instructed by WFM</inlineHelpText>
    <label>Google API Token Master</label>
    <type>Checkbox</type>
</CustomField>