force-app/main/default/objects/Contact/fields/sirenum__Google_Calendar_ID__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Google_Calendar_ID__c</fullName>
    <inlineHelpText>Used by the Google Calendar interface to identify the calendar to show shifts in.</inlineHelpText>
    <label>Google Calendar ID</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>