force-app/main/default/objects/Contact/fields/sirenum__Holiday_Scheme__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Holiday_Scheme__c</fullName>
    <inlineHelpText>0 means no holiday scheme, 11 means Holiday Scheme for DLR people</inlineHelpText>
    <label>Holiday Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>