force-app/main/default/objects/Contact/fields/sirenum__Home_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Home_Coordinates__c</fullName>
    <inlineHelpText>GPS Coordinates of the person&apos;s home address</inlineHelpText>
    <label>Home Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>