force-app/main/default/objects/Contact/fields/sirenum__Last_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Last_Timesheet__c</fullName>
    <inlineHelpText>The week ending date of this employee&apos;s most recent timesheet</inlineHelpText>
    <label>Last Timesheet</label>
    <summarizedField>sirenum__Timesheet__c.sirenum__Week_Ending__c</summarizedField>
    <summaryForeignKey>sirenum__Timesheet__c.sirenum__Worker__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>