force-app/main/default/objects/Contact/fields/sirenum__Limited_Company__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Limited_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limited Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>