force-app/main/default/objects/Contact/fields/sirenum__Loaned_Amount__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Loaned_Amount__c</fullName>
    <label>Loaned Amount</label>
    <summarizedField>sirenum__Loan__c.sirenum__Amount__c</summarizedField>
    <summaryForeignKey>sirenum__Loan__c.sirenum__Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>