force-app/main/default/objects/Contact/fields/sirenum__Manual_NIC__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Manual_NIC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>False if the NI number is normal, True otherwise (maintained autmoatically using workflow rule)</description>
    <inlineHelpText>If the National Insurance number isn&apos;t according to regulation (and you see an error), check this box.</inlineHelpText>
    <label>Invalid NIC</label>
    <type>Checkbox</type>
</CustomField>