force-app/main/default/objects/Contact/fields/sirenum__Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Marital_Status__c</fullName>
    <inlineHelpText>This is required for Sage Payroll</inlineHelpText>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Civil Partnership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>