force-app/main/default/objects/Contact/fields/sirenum__Max_Weekly_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Max_Weekly_Work_Hours__c</fullName>
    <description>Maximum work hours allowed per week. Used by &apos;Hidden&apos; rules</description>
    <label>Max Weekly Work Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>