force-app/main/default/objects/Contact/fields/sirenum__Min_Weekly_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Min_Weekly_Work_Hours__c</fullName>
    <description>Minimum weekly work hours, used by Candidate Search</description>
    <inlineHelpText>If the employee has a set minimum hours they should be working, enter it here. It will be reflected when finding candidates in Scheduling.</inlineHelpText>
    <label>Min Weekly Work Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>