force-app/main/default/objects/Contact/fields/sirenum__Mobile_Phone_Sanitised__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Mobile_Phone_Sanitised__c</fullName>
    <description>Deprecated. Use the Mobile Phone field instead</description>
    <formula>$Label.sirenum__StandardDeprecated</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deprecated. Use the Mobile Phone field instead</inlineHelpText>
    <label>Mobile Phone Sanitised (Deprecated)</label>
    <type>Text</type>
</CustomField>