force-app/main/default/objects/Contact/fields/sirenum__MySirenum_Device_Platform__c.field-meta.xml
<CustomField>
    <fullName>sirenum__MySirenum_Device_Platform__c</fullName>
    <description>Operation system of the device in which they use MySirenum</description>
    <label>MySirenum Device Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>