force-app/main/default/objects/Contact/fields/sirenum__Name_Pronounced__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Name_Pronounced__c</fullName>
    <inlineHelpText>Used by WFM App to pronounce this name</inlineHelpText>
    <label>Name (Pronounced)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>