force-app/main/default/objects/Contact/fields/sirenum__National_Insurance__c.field-meta.xml
<CustomField>
    <fullName>sirenum__National_Insurance__c</fullName>
    <label>National Insurance #</label>
    <length>9</length>
    <type>Text</type>
</CustomField>