force-app/main/default/objects/Contact/fields/sirenum__Next_Address_Geocoding__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Next_Address_Geocoding__c</fullName>
    <label>Next Address Geocoding</label>
    <type>Date</type>
</CustomField>