force-app/main/default/objects/Contact/fields/sirenum__NI_Category__c.field-meta.xml
<CustomField>
    <fullName>sirenum__NI_Category__c</fullName>
    <inlineHelpText>Enter one of the following:

A
B
C
D
E
F
G
J
L
S
X</inlineHelpText>
    <label>NI Category</label>
    <length>1</length>
    <type>Text</type>
</CustomField>