force-app/main/default/objects/Contact/fields/sirenum__Night_Time_End__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Night_Time_End__c</fullName>
    <label>Night Time End</label>
    <length>5</length>
    <type>Text</type>
</CustomField>