force-app/main/default/objects/Contact/fields/sirenum__Night_Time_Start__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Night_Time_Start__c</fullName>
    <description>Start of the night time of the user</description>
    <label>Night Time Start</label>
    <length>5</length>
    <type>Text</type>
</CustomField>