force-app/main/default/objects/Contact/fields/sirenum__P46_Statement__c.field-meta.xml
<CustomField>
    <fullName>sirenum__P46_Statement__c</fullName>
    <description>Sage requirement</description>
    <inlineHelpText>If the employee has provided you with a P46 form, use the information provided in section 1 of the form to help you select the correct option 

Options:
0 =N/A
1 =A Only
2 =A and B
3 =B Only
4 =B and C
5 =C Only
6 =A and C
7 =None</inlineHelpText>
    <label>P46 Statement</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>