force-app/main/default/objects/Contact/fields/sirenum__Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_Account__c</fullName>
    <label>BACS Account Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>