force-app/main/default/objects/Contact/fields/sirenum__Payment_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_Account_Name__c</fullName>
    <description>Name of Account Holder. TODO: I should set up a validation rule to take the payment account name for  LIMITED COMPANY PAYEES from the payment company</description>
    <inlineHelpText>Name of Account Holder. BACS Standard allows up to 18 Characters</inlineHelpText>
    <label>BACS Bank Account Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>