force-app/main/default/objects/Contact/fields/sirenum__Payment_BACS_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_BACS_Account_Type__c</fullName>
    <label>BACS Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Account</fullName>
                <default>true</default>
                <label>Bank Account</label>
            </value>
            <value>
                <fullName>Building Society</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>