force-app/main/default/objects/Contact/fields/sirenum__Payment_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_Bank_Address__c</fullName>
    <label>Bank Address</label>
    <type>TextArea</type>
</CustomField>