force-app/main/default/objects/Contact/fields/sirenum__Payment_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>