force-app/main/default/objects/Contact/fields/sirenum__Payment_Building_Society_Number__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_Building_Society_Number__c</fullName>
    <label>Building Society Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>