force-app/main/default/objects/Contact/fields/sirenum__Payment_method__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_method__c</fullName>
    <label>Payment method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BACS</fullName>
                <default>true</default>
                <label>BACS</label>
            </value>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>