force-app/main/default/objects/Contact/fields/sirenum__Payment_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Payment_Sort_Code__c</fullName>
    <description>Sort code for payment.</description>
    <inlineHelpText>Sort code for payment</inlineHelpText>
    <label>BACS Sort Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>