force-app/main/default/objects/Contact/fields/sirenum__Photo_ID__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Photo_ID__c</fullName>
    <inlineHelpText>Do not edit this manually</inlineHelpText>
    <label>Photo ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>