force-app/main/default/objects/Contact/fields/sirenum__PTS_AC_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>sirenum__PTS_AC_Expiry_Date__c</fullName>
    <description>Updated by the ticket trigger</description>
    <label>PTS AC Expiry Date</label>
    <type>Date</type>
</CustomField>