force-app/main/default/objects/Contact/fields/sirenum__PTS_Audit__c.field-meta.xml
<CustomField>
    <fullName>sirenum__PTS_Audit__c</fullName>
    <description>Logic to decide if a PTS is valid, produces text Valid / Invalid, No PTS</description>
    <formula>IF(sirenum__PTS_AC_Expiry_Date__c  &gt;  TODAY()   &amp;&amp;   sirenum__PTS_DCCR_Expiry_Date__c  &gt;  TODAY(), &quot;PTS AC/DCCR Valid&quot;, IF(sirenum__PTS_AC_Expiry_Date__c  &gt;  TODAY(), &quot;PTS AC Valid&quot;, IF(sirenum__PTS_DCCR_Expiry_Date__c  &gt;  TODAY(), &quot;PTS DCCR Valid&quot;, IF(NOT(ISNULL(sirenum__PTS_AC_Expiry_Date__c)) || NOT(ISNULL(sirenum__PTS_DCCR_Expiry_Date__c)), &quot;Invalid&quot;, &quot;N/A&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If person has no card will show &quot;N/A&quot;. IF card expired will show &quot;Invalid&quot;. otherwise shows Says the name of the card and &quot;Valid&quot;</inlineHelpText>
    <label>PTS Audit</label>
    <type>Text</type>
</CustomField>