force-app/main/default/objects/Contact/fields/sirenum__PTS_Card__c.field-meta.xml
<CustomField>
    <fullName>sirenum__PTS_Card__c</fullName>
    <inlineHelpText>The type of PTS training this person has</inlineHelpText>
    <label>PTS Card</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Card</fullName>
                <default>true</default>
                <label>No Card</label>
            </value>
            <value>
                <fullName>PTS AC Only</fullName>
            </value>
            <value>
                <fullName>PTS DC Only</fullName>
            </value>
            <value>
                <fullName>PTS AC/DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>