force-app/main/default/objects/Contact/fields/sirenum__PTS_card_Expires_date__c.field-meta.xml
<CustomField>
    <fullName>sirenum__PTS_card_Expires_date__c</fullName>
    <description>Date when PTS Expires</description>
    <inlineHelpText>PTS card expires every two years</inlineHelpText>
    <label>PTS Expires</label>
    <type>Date</type>
</CustomField>