force-app/main/default/objects/Contact/fields/sirenum__Push_Notification_Id__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Push_Notification_Id__c</fullName>
    <description>Push Notification Registration ID received from the device</description>
    <label>Push Notification Registration ID</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>