force-app/main/default/objects/Contact/fields/sirenum__Scheduling_Can_Create_Shifts__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Scheduling_Can_Create_Shifts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>DEPRECATED</inlineHelpText>
    <label>Scheduling Can Create Shifts(DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>