force-app/main/default/objects/Contact/fields/sirenum__Scheduling_Group__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Scheduling_Group__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Used by Scheduling to determine position of this employee within the team</inlineHelpText>
    <label>Scheduling Group</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>