force-app/main/default/objects/Contact/fields/sirenum__Scheduling_Hidden__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Scheduling_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, contact will be hidden from the Scheduling list</inlineHelpText>
    <label>Scheduling Hidden</label>
    <type>Checkbox</type>
</CustomField>