force-app/main/default/objects/Contact/fields/sirenum__Send_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Send_Breakdown__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, then the person will receive weekly pay advices informing them of their gross pay</inlineHelpText>
    <label>Send Pay Advice</label>
    <type>Checkbox</type>
</CustomField>