force-app/main/default/objects/Contact/fields/sirenum__Shift_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Shift_Activity_Date__c</fullName>
    <inlineHelpText>When a Shift was last assigned to the Contact or when an assigned Shift was changed in some way</inlineHelpText>
    <label>Shift Activity Date</label>
    <type>Date</type>
</CustomField>