force-app/main/default/objects/Contact/fields/sirenum__Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>