force-app/main/default/objects/Contact/fields/sirenum__Timesheet_Entry_Totals_Only__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Timesheet_Entry_Totals_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, then this person will only enter total hours instead of daily hours.</inlineHelpText>
    <label>Timesheet Entry - Totals Only</label>
    <type>Checkbox</type>
</CustomField>